--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "String Gen Bot",
     "description": "A Telegram Bot to generate Telethon and Pyrogram String Session.",
-    "logo": "https://telegra.ph/file/654ddaf472f18b799600b.jpg",
+    "logo": "https://telegra.ph/file/29b1fbd85fe347fd9ceca.jp",
     "keywords": [
         "python3",
         "telegram",
